Fix minor header align issue

--- a/style.css
+++ b/style.css
@@ -103,7 +103,15 @@ label {
     border: none;
     background-color: rgb(25,146,212);
     color: white;
-    padding: 0.5em 1.5em;
+    padding: 0.7em 1.5em;
+}
+
+.bell {
+    justify-self: end;
+}
+
+.user-name {
+    justify-self: start;
 }
 
 .sidebar {
